Revert "Alteração do namespace"
This reverts commit 0d94ac46ad2f55de47bcd71c38d39fce161faee2.

--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     },
     "autoload": {
         "psr-4": {
-            "AluisioPires\\PtBrValidator\\": "src/pt-br-validator"
+            "Aluisio-Pires\\PtBrValidator\\": "src/pt-br-validator"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "AluisioPires\\PtBrValidator\\ValidatorProvider"
+                "Aluisio-Pires\\PtBrValidator\\ValidatorProvider"
             ]
         }
     },
